--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <div class="card">
                     <div class="c1">
                         <div class="c_back">
-                            <img class="c_front" src="/Images/16.png">
+                            <img class="c_front" src="/Images/16.jpg">
                         </div>
                     </div>
                     <div class="c2">Professional Teacher</div>
